@@ -1,3 +1,7 @@
+2013-02-15  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-shr-100.patch: Updated.
+
 2013-02-06  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-shr-100.patch: Updated.
